# OpenDermatology

./: .gitignore  Makefile  README.md  package-lock.json  package.json  process_image
include/: db.h
openderm/: package-lock.json  package.json
openderm/src/: FileUpload.js  FileUpload.module.css  global.css
react-app/: package-lock.json  package.json
react-app/public/: index.html
react-app/src/: App.js  firebaseConfig.js
react-app/src/components/: LoadingScene.js  MainLoadingScene.js  PaddingScene.js  ThreeScene.js  Uploadimage.js  VantaBackground.js  auth.js  firestore.js  loginForm.js  uploadimage.css
react-app/src/config/: firebase-config.js
react-app/src/pages/: history.js  login.js  openderm.js
react-app/src/styles/: App.css  LoadingScene.css  LoadingStyles.css  ResnStyle.css
src/: CMakeLists.txt  Input.cpp  c_cpp_properties.json  db.cpp  db.h  experiment.cpp  input.h  loginAuth.cpp  loginAuth.h  logins.sql  server.cpp  server.py  submissions.sql  submits_database.sql
src/connect/: loginAuth.cpp  server.cpp
src/cpp/: Input.cpp
src/databases/: logins.sql
src/include/: input.h
src/py/: README.md  training.md
